# svea_lli_zephyr

Projects/svea-lli/: CMakeLists.txt  prj.conf  psu_prj.conf
Projects/svea-lli/boards/: clicker4_stm32f7.overlay  mcu.overlay
Projects/svea-lli/include/: ina238_sensor.h  ina2xx_common.h  mcp4725_monitor.h  mcp9600_sensor.h  ros_iface.h
Projects/svea-lli/src/: ina238_sensor.c  main.c  mcp4725_monitor.c  mcp9600.c  mcp9600_sensor.c  ros_iface.c
west-manifest/: west.yml
